modify Orgaview and make Summaries not able to submitting until the Eventdate is over

--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-    <nav class="navigation navigation-secondary" is="mops-navigation" th:fragment="navigation">
+    <nav class="navigation navigation-secondary border-right" is="mops-navigation" th:fragment="navigation">
         <!-- Navigation als ungeordnete Liste mit einfachen Links hier einfügen! -->
         <ul>
             <li class="active">
