--- a/src/main/resources/templates/orga_delayed_submission.html
+++ b/src/main/resources/templates/orga_delayed_submission.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <header>
-    <nav class="navigation navigation-secondary" is="mops-navigation" th:fragment="navigation">
+    <nav class="navigation navigation-secondary border-right" is="mops-navigation" th:fragment="navigation">
         <!-- Navigation als ungeordnete Liste mit einfachen Links hier einfügen! -->
         <ul>
             <li>
@@ -65,6 +65,11 @@
          role="alert" th:text="${errormessage}"
          th:if="${errormessage != ''}">
     </div>
+    <div class=" container alert alert-success alert-dismissible"
+         style="padding: 10px;"
+         role="alert" th:if="${delayedsubmissions.isEmpty()}">
+        keine verspätete Abgaben zur Bearbeitung.
+    </div>
     <div class="container bg-light rounded shadow-lg "
          style=" padding: 10px; margin-top: 40px; margin-bottom: 50px">
         <div class="row border-bottom  mx-1 my-1 align-content-center">
@@ -79,10 +84,8 @@
                 <form class="form-inline justify-content-center" method="POST"
                       th:action="@{/rheinjug2/orga/searchstudent}">
                     <div class="form-group mx-sm-3 ">
-                        <input type="text"
-                               class="form-control" th:name="searchedName"
-                               th:value="${searchForm.searchedName}"
-                               placeholder="Uni-Kennung">
+                        <input type="text" class="form-control" th:name="searchedName" placeholder="Uni-Kennung"
+                               required>
                     </div>
                     <button type="submit" class="btn btn-outline-secondary ">suchen</button>
                 </form>
@@ -91,9 +94,8 @@
                 <form method="POST" th:action="@{/rheinjug2/orga/searchevent}"
                       class="form-inline justify-content-center">
                     <div class="form-group mx-sm-3 ">
-                        <input type="text" class="form-control" th:name="searchedName"
-                               th:value="${searchForm.getSearchedName()}"
-                               placeholder="Veranstaltungsname">
+                        <input type="text" class="form-control" th:name="searchedName" placeholder="Veranstaltungsname"
+                               required>
                     </div>
                     <button type="submit" class="btn btn-outline-secondary ">suchen</button>
                 </form>
@@ -139,7 +141,8 @@
                             <span>Inhalt schreiben</span>
                         </div>
                         <div class="col-12 my-1 mb-2">
-                            <textarea class="input-group" name="summaryContent" placeholder="Schreibe hier die Zusammenfassung"
+                            <textarea class="input-group" name="summaryContent"
+                                      placeholder="Schreibe hier die Zusammenfassung"
                                       rows="12" th:value="${submission.summaryContent}"></textarea>
                         </div>
                     </div>
